--- a/templates/base.html
+++ b/templates/base.html
@@ -43,6 +43,21 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'blog_new' %}">+ New</a>
                 </li>
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'password_change' %}">Change password</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'login' %}">Log In</a>
+                    </li>
+                {% endif %}
             </ul>
             </div>
         </div>
